# NLPulse

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
analyzer/: _speech.py  _text.py  speech_analysis.py  text_analysis.py
gui/: interface.py  interface_clean.py
tests/: test_speech_analysis.py  test_text_analysis.py
